--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
     "express": "^4.17.1",
+    "jasmine": "^3.6.3",
     "jquery": "^3.5.1",
     "mongoose": "^5.11.8",
     "multer": "^1.4.2",
