--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
+    "mongoose-find-and-filter": "^1.0.0",
     "multer": "^1.4.2",
     "nodemon": "^2.0.6",
+    "querystring": "^0.2.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "url": "^0.11.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
