--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
+    "cookie-session": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jasmine": "^3.6.3",
@@ -32,6 +33,9 @@
     "mongoose-find-and-filter": "^1.0.0",
     "multer": "^1.4.2",
     "nodemon": "^2.0.6",
+    "passport": "^0.4.1",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-oauth2": "^1.5.0",
     "querystring": "^0.2.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
