--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": " mocha ./backend/test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "server": "nodemon backend/app.js"
@@ -29,6 +29,7 @@
     "jasmine": "^3.6.3",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^8.2.1",
     "mongoose": "^5.11.8",
     "mongoose-find-and-filter": "^1.0.0",
     "multer": "^1.4.2",
